--- a/TODO
+++ b/TODO
@@ -3,10 +3,13 @@ Source to TST (+ TST nodes)
 ---------------------------
 - Clean up expressionBlock->rootExpression.
 - Condition operator may not work.
-- Var implementation? 
+- Half expressions, { 3 + } doesn't throw an parser error.
 - There is no distinction between an else and an elseif
 - break, continue, etc. implemented?
 - Functions without parameters are passed incorrectly?
+- The "Available block types are: ..." are incorrect.
+- Implement cycles.
+- If is broken. {if false} blabla {/if} works!
 
 TST to AST (+ AST nodes)
 ------------------------
