--- a/TODO
+++ b/TODO
@@ -9,16 +9,16 @@ Source to TST (+ TST nodes)
 - Functions without parameters are passed incorrectly?
 - The "Available block types are: ..." are incorrect.
 - Implement cycles.
-- If is broken. {if false} blabla {/if} works!
+- If is broken. {if false} blabla {/if} shows blabla :-(. 
 
 - Error message is sometimes  incorrect: 
   var $a = array( "aa
   ___________________________^
 
-- Improve error message for: {var $a = my_function "blaa")}
 - Test COMMA missing for parse function_call, and also ending_brace. Now the expression keeps reading, and throws the wrong error.
 - Function call: strange characters after expression will throw an incorrect error. (Expression keeps on reading)
 - ArrayAppend {$a[] = 5}, needs to be fixed.
+- Fix: {15[0]}
 
 TST to AST (+ AST nodes)
 ------------------------
