- Added the array_range operator: {var $a = 1..5} or {foreach 1..5 as $i}.

--- a/TODO
+++ b/TODO
@@ -16,6 +16,8 @@ Source to TST (+ TST nodes)
   ___________________________^
 
 - ArrayAppend {$a[] = 5}, needs to be fixed.
+- Check operand types in an expression: {var $a = 1 + array(1,2)}
+
 
 TST to AST (+ AST nodes)
 ------------------------
