- The Manager can compile templates now. - The regression tests use the Manager to compile and run the test templates.

--- a/TODO
+++ b/TODO
@@ -25,6 +25,7 @@ Source to TST (+ TST nodes)
 - Fix error message exceptions.
 - References, are not implemented but used. 
 - Implement typehints for the functions.
+- Cycle in the foreach.
 
 
 TST to AST (+ AST nodes)
