--- a/TODO
+++ b/TODO
@@ -26,6 +26,8 @@ Source to TST (+ TST nodes)
 - References, are not implemented but used. 
 - Implement typehints for the functions.
 - Cycle in the foreach.
+- Renaming variable names so that they don't interfere with the template code runner.
+- Implement the '->' ? 
 
 
 TST to AST (+ AST nodes)
