--- a/TODO
+++ b/TODO
@@ -20,15 +20,16 @@ Source to TST (+ TST nodes)
 - Remove the condition property from the ezcTemplateIfConditionTstNode.
 - Test the function array_remove_last(), array_remove_first()
 
-- Manger should have 'send', 'receive' names.
 - Fix error message exceptions.
-- References, are not implemented but used. 
 - Implement typehints for the functions.
 - Cycle in the foreach.
 - Renaming variable names so that they don't interfere with the template code runner.
 
 - ezcTemplateNewAstNode has no parameter handling.
 - SymbolTable checking of the send, receive variables.
+
+- FIX context.
+- Do not compile when output exists :-).
 
 
 TST to AST (+ AST nodes)
