- Fixed the context parser.

--- a/TODO
+++ b/TODO
@@ -28,8 +28,9 @@ Source to TST (+ TST nodes)
 - ezcTemplateNewAstNode has no parameter handling.
 - SymbolTable checking of the send, receive variables.
 
-- FIX context.
-- Do not compile when output exists :-).
+- Add XHTML tags the XhtmlContex.
+- Check compiler flags.
+- Check for newer template files than the compiled thingy.
 
 
 TST to AST (+ AST nodes)
