--- a/TODO
+++ b/TODO
@@ -1,37 +1,43 @@
-$manager = new ezcTemplateManager( "
+TODO
+====
+
+Rename variable names to prevent interference
+---------------------------------------------
+
+Using the variable name: {$this} in the template code is dangerous. 
+The template is called via the include method, in the class: <ezcTemplateCompiledCode>.
+{$this} represents the current object, and can be overwritten. 
+
+Renaming the (critical) variables used in the template can be a solution. 
+(For example prepend the variable name with _ezc_.) The problem with this
+solution is that a variable can be used in a literal string: 
+{"My name is $name"}. Therefore the literals should be scanned for variable names, and
+translated accordingly.
 
 
-Documentation
--------------
+Version number
+--------------
+
+Do we need a version number? 
+
+To differentiate between other template engines, we rely on the path and template extension.
+Newer versions of this template engine should be compatible with the older templates. 
+
+
+
+Other
+-----
+
 - Set the private classes to '@access private'.
-
-
-Source to TST (+ TST nodes)
----------------------------
 - ArrayAppend {$a[] = 5}, needs to be fixed.
-- Implement the version number.: 1.0
-
 - Fix error message exceptions.
 - Implement typehints for the functions.
-- Renaming variable names so that they don't interfere with the template code runner.
-
-- SymbolTable checking of the send, receive variables.
-
-
-TST to AST (+ AST nodes)
-------------------------
-
-
-
-AST to PHP (+ PHP code )
-------------------------
 
 
 
 
-
-Amos' old list:
----------------
+Old (outdated) list
+-------------------
 
 - Create meta-code class which are elements which wrap around real code elements, it has a method to fetch the first real element from its children.
   this allows optimizer and other code which inspects the code tree to go past these elements.
