--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-1.0beta1 - [RELEASEDATE]
+1.0beta1 - Wednesday 26 April 2006
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 
 - Initial release of this package.
