--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-1.0beta2 - [RELEASEDATE]
+1.0beta2 - Tuesday 09 May 2006
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 
 - Fixed issues with escape characters in the single quoted string, double
