- Added "date" functions. - Updated ChangeLog according to our standards.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+1.0.rc1
+^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+
+- Added "web" functions.
+- Added "date" functions.
+
 - Fixed a bug that arrays and properties could not be send as expression
   part of the include construct. E.g. {include "abc.ezt" send $a[0] as $b}
 - Fixed a bug that property fetches were ignored after the first fetch. 
