--- a/ChangeLog
+++ b/ChangeLog
@@ -14,6 +14,8 @@
   E.g. {if ( true ) }
 - Fixed a bug that a function call after a property fetch would give an error
   message. E.g. {$mail->myProp} {str_len( $mail->myProp)}
+- Fixed a bug that the equal, not equal, identical, not identical could not
+  compare arrays with arrays and arrays with 'values'.
 - Fixed a bug in the get_class function. Due to a spelling error it would
   throw a PHP Fatal Error.
 - Fixed bug #8280: Array assignment with non-constants not working.
