--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-1.0.rc1 - [RELEASEDATE]
+1.0rc1 - [RELEASEDATE]
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 
 - Added "web" functions.
