--- a/ChangeLog
+++ b/ChangeLog
@@ -3,7 +3,8 @@
 - Fixed a bug that fetching an array element was never considered as a
   possible sub array. E.g. {var $a = array( array("a") )} {foreach $a[0] as $i}
   gave an error.
-
+- Fixed a bug that an imported variable with default value got the wrong type. 
+  E.g. {var $myArray = false} {foreach $myArray as $i} gave an error.
 
 1.0rc1 - [RELEASEDATE]
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
