--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+1.0 - [RELEASEDATE]
+^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+
 - Fixed a bug that some indentations were not removed.
 - Fixed a bug that the newlines after a non output block were not removed. 
 - Fixed a bug that fetching an array element was never considered as a
@@ -6,7 +9,8 @@
 - Fixed a bug that an imported variable with default value got the wrong type. 
   E.g. {var $myArray = false} {foreach $myArray as $i} gave an error.
 
-1.0rc1 - [RELEASEDATE]
+
+1.0rc1 - Monday 29 May 2006
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 
 - Added "web" functions.
