--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-1.0 - [RELEASEDATE]
+1.0 - Monday 12 June 2006
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 
 - Fixed a bug that some indentations were not removed.
