--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+- Added custom blocks and custom functions.
+
 1.0 - Monday 12 June 2006
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 
