- Released Template version 1.1beta1

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-1.1beta1 - [RELEASEDATE]
+1.1beta1 - Tuesday 24 October 2006
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 
 - Added custom blocks and custom functions.
