--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+
+- Fixed bug #008837: Delimiter doesn't work in nested loops.
+
 1.1beta1 - Tuesday 24 October 2006
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 
