- Array fetches do not have parenthesis. (Bug #9286) - Added the runtime exception file (missing from a previous commit).

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 
 - Fixed bug #8837: Delimiter doesn't work in nested loops.
 - Fixed bug #9279: Accessing properties from a null object.
+- Fixed bug #9286: Parse error in compiled template on accessing properties on
+  an object in an array
 
 1.1beta1 - Tuesday 24 October 2006
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
