- Released Template version 1.1beta2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-1.1beta2 - [RELEASEDATE]
+1.1beta2 - Monday 20 November 2006
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 
 - Changed the location where compiled templates are stored. They will now be
