--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+- Fixed issue #9601: wrong __isset implementation in Template/template.php
+
+
 1.1beta2 - Monday 20 November 2006
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 
