--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 - Fixed issue #9601: wrong __isset implementation in Template/template.php
 - Fixed an issue that the space before 'array append' threw an exception.
+- Fixed some parser exception error messages.
 
 
 1.1beta2 - Monday 20 November 2006
