--- a/ChangeLog
+++ b/ChangeLog
@@ -23,6 +23,7 @@
 - Assignments are not allowed inside an expression of a control block. Eg:
   {while $a = 3} or {if $b = 2}
 - All binary operators can be used repeatedly. Eg: {3 === 4 === 5}
+- The angle brackets are replaced with single quotes within the exceptions.
 
 
 1.1beta2 - Monday 20 November 2006
