--- a/ChangeLog
+++ b/ChangeLog
@@ -24,6 +24,7 @@
   {while $a = 3} or {if $b = 2}
 - All binary operators can be used repeatedly. Eg: {3 === 4 === 5}
 - The angle brackets are replaced with single quotes within the exceptions.
+- Variables cannot be used inside a string.
 
 
 1.1beta2 - Monday 20 November 2006
