- Released Template version 1.1

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-1.1 - [RELEASEDATE]
+1.1 - Monday 18 December 2006
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 
 - Fixed issue #9464: Weird error messages on calculations with
