--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,8 @@
 
 - Implemented issue #9965: Support for delayed initialization through
   ezcBaseInit.
+- Fixed issue #10261: Array fetch and property fetch could not be used
+  together.
 
 
 1.1 - Monday 18 December 2006
