--- a/ChangeLog
+++ b/ChangeLog
@@ -1,17 +1,18 @@
 1.2beta1 - [RELEASEDATE]
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 
-- Implemented issue #9965: Support for delayed initialization through
-  ezcBaseInit.
-- Fixed issue #10261: Array fetch and property fetch could not be used
-  together.
-- Fixed issue #10036: Invalid generated PHP code cannot be renewed without
-  deleting the generated template.
 - Fixed issue #10035: Block comments mixed with Javascript comments generates
   wrong Template code.
-- Support for named parameters in the custom functions.
-- Support for dynamic locations in the template include(s).
-- Possible to send a Template Object to the custom function.
+- Fixed issue #10036: Invalid generated PHP code cannot be renewed without
+  deleting the generated template.
+- Fixed issue #10261: Array fetch and property fetch could not be used
+  together.
+- Implemented issue #9965: Support for delayed initialization through
+  ezcBaseInit.
+- Added support for named parameters in the custom functions.
+- Added support for dynamic locations in the template include(s).
+- Made it possible to send a Template Object to the custom function.
+
 
 1.1 - Monday 18 December 2006
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
